Bug 899447 - Don't set compileAndGo for scripts evaluated against a non-global object, r=luke.