js/src/jsapi.cpp
@@ -5169,7 +5169,7 @@ JS::Evaluate(JSContext *cx, HandleObject obj, CompileOptions options,
 
     AutoLastFrameCheck lfc(cx);
 
-    options.setCompileAndGo(true);
+    options.setCompileAndGo(obj->is<GlobalObject>());
     options.setNoScriptRval(!rval);
     SourceCompressionToken sct(cx);
     RootedScript script(cx, frontend::CompileScript(cx, &cx->tempLifoAlloc(),
